# R-SODIUM-Ultra-2-Enclosure-Docker-Station-Firmware

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  SSD1315_test.c.bak  idf_component.yml  main.c
main/fan_ctl/: pwm_ctl.c  pwm_ctl.h
main/i2c_0/MP4245/: MP4245.c  MP4245.h
main/i2c_0/TMP117/: TMP117.c  TMP117.h
main/i2c_1/lvgl_ui/: display.c  lvgl_init.c  lvgl_init.h  lvgl_show.c
main/init_func/: init_func.c  init_func.h
main/res/: fonts.c  logo.c
main/ws2812/: ws2812.c  ws2812.h
